feat: done Home section layout

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,5 +26,9 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: white;
+  background: rgba(220, 119, 0);
+}
+
+.text-shadow-orange {
+  text-shadow: 0 0 20px rgba(220, 119, 0, .7);
 }
